add some components

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
 .App {
-  text-align: center;
-  /* background-color: #a3a3a3; */
+  background-image: url("./4931029.jpg");
+  background-color: #a3a3a3;
 }
-
+.milk__card:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
